Fixed version for actual relsease & addded cancel button to search